# osv

./: .envrc  .gitignore  CHANGELOG.md  Cargo.toml  Gemfile  README.md  Rakefile  osv.gemspec
.github/workflows/: gem-push.yml  ruby.yml
benchmark/: comparison_benchmark.rb  profile.sh  ruby_profiling_script.rb  run_benchmarks.sh
ext/osv/: Cargo.toml  extconf.rb
ext/osv/src/: compat.rs  hash.rs  io_reader.rs  lib.rs  reader.rs  utils.rs
ext/osv/src/csv/: builder.rs  header_cache.rs  mod.rs  parser.rs  read_impl.rs  reader.rs  record.rs  record_reader.rs  ruby_integration.rs  ruby_reader.rs
lib/: osv.rb  osv.rbi
lib/osv/: version.rb
test/: basic_test.rb  big_test.rb  concurrency_test.rb  core_functionality_test.rb  encoding_test.rb  format_options_test.rb  gc_stress_test.rb  io_handling_test.rb  memory_safety_test.rb  performance_test.rb  stress_test.rb  test.csv  test.tsv
