[package]
name = "osv"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
csv = "^1.3"
flate2 = "1.0.35"
kanal = "0.1.0-pre8"
magnus = { version = "0.7", features = ["rb-sys"] }
rb-sys = "^0.9"
serde = { version = "1.0", features = ["derive"] }
serde_magnus = "0.8.1"
thiserror = "2.0"
xxhash-rust = { version = "0.8.12", features = ["xxh3"] }
