[package]
name = "osv"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ahash = "0.8"
csv = "^1.3"
flate2 = "1.0.35"
magnus = { version = "0.7", features = ["rb-sys"] }
rb-sys = "^0.9"
serde = { version = "1.0", features = ["derive"] }
serde_magnus = "0.8.1"
thiserror = "2.0"
itertools = "^0.14"
tempfile = "3.17.1"

[target.'cfg(target_os = "linux")'.dependencies]
jemallocator = { version = "0.5", features = ["disable_initial_exec_tls"] }

[target.'cfg(not(any(target_os = "linux", target_os = "windows")))'.dependencies]
mimalloc = { version = "0.1", default-features = false }
